# staged-qwen3.5-scivqa

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  evaluation_extraction_results.json  evaluation_results.json  evaluation_summarization_results.json  mkdocs.yml  pyproject.toml  smt_test_state.json  smt_train_dev_state.json  submission_final_test.json  submission_final_test_old.json  submission_finetuning_dev.json  submission_finetuning_dev_state.json  submission_finetuning_extraction_dev.json  submission_finetuning_extraction_dev_state.json  submission_finetuning_extraction_test.json  submission_finetuning_extraction_test_state.json  submission_finetuning_summary_dev.json  submission_finetuning_summary_dev_state.json  submission_finetuning_summary_test.json  submission_finetuning_summary_test_state.json  submission_finetuning_test.json  submission_finetuning_test__factoid_state.json  submission_finetuning_test__list_state.json  submission_finetuning_test__paragraph_state.json  submission_finetuning_test__yes_no_state.json  submission_finetuning_test_state.json  submission_reflection_test_state.json  submission_reflection_test_state_old.json  vulture_whitelist.py
.github/workflows/: cd.yml  ci.yml  license.yml  pre-commit.yml  tests.yml
configs/: test.yaml  train.yaml
configs/callbacks/: default.yaml  early_stopping.yaml  model_checkpoint.yaml  model_summary.yaml
configs/data/: mnist.yaml
configs/hydra/: default.yaml
configs/loggers/: csv.yaml  default.yaml  tensorboard.yaml
configs/model/: mnist.yaml
configs/trainer/: cpu.yaml  default.yaml  gpu.yaml
docs/: LICENSE.md  welcome.md
docs/code/models/: mnist.md
docs/images/: high-level-system-overview.drawio
docs/superpowers/specs/: 2026-07-23-cli-notebook-alignment-design.md
notebooks/: 1-trial-data-loading.ipynb  1. Data loading.ipynb  2-internvl3-8b-inference.ipynb  2. Finetuning Google Deplot (image+context->table).ipynb  2. Finetuning Google Deplot (image+context->table).py  2. Finetuning Qwen3.5 (Factoid) (submission).ipynb  2. Finetuning Qwen3.5 (Factoid) (submission).py  2. Finetuning Qwen3.5 (Factoid).ipynb  2. Finetuning Qwen3.5 (Factoid).py  2. Finetuning Qwen3.5 (List) (submission).ipynb  2. Finetuning Qwen3.5 (List) (submission).py  2. Finetuning Qwen3.5 (List).ipynb  2. Finetuning Qwen3.5 (List).py  2. Finetuning Qwen3.5 (Paragraph) (submission).ipynb  2. Finetuning Qwen3.5 (Paragraph) (submission).py  2. Finetuning Qwen3.5 (Paragraph).ipynb  2. Finetuning Qwen3.5 (Paragraph).py  2. Finetuning Qwen3.5 (Yes|No) (submission).ipynb  2. Finetuning Qwen3.5 (Yes|No) (submission).py  2. Finetuning Qwen3.5 (Yes|No).ipynb  2. Finetuning Qwen3.5 (Yes|No).py  2. Finetuning Qwen3.5 (image+context->summary) (submission).ipynb  2. Finetuning Qwen3.5 (image+context->summary) (submission).py  2. Finetuning Qwen3.5 (image+context->summary).ipynb  2. Finetuning Qwen3.5 (image+context->summary).py  2. Finetuning Qwen3.5 (image+context->table extraction).ipynb  2. Finetuning Qwen3.5 (image+context->table extraction).py  2. Finetuning Qwen3.5 (image+context->table valid|invalid).ipynb  2. Finetuning Qwen3.5 (image+context->table) (submission).ipynb  2. Finetuning Qwen3.5 (image+context->table) (submission).py  2. Finetuning Qwen3.5 (image+context->table).ipynb  2. Finetuning Qwen3.5 (image+context->table).py  2. Finetuning Qwen3.5 (submission).ipynb  2. Finetuning Qwen3.5 (submission).py  2. Finetuning Qwen3.5 Summary (submission).ipynb  2. Finetuning Qwen3.5 VQA (Factoid).ipynb  2. Finetuning Qwen3.5 VQA (List).ipynb  2. Finetuning Qwen3.5 VQA (Paragraph) (submission).ipynb  2. Finetuning Qwen3.5 VQA (Paragraph).ipynb  2. Finetuning Qwen3.5 VQA (Yes|No).ipynb  (+33 more)
src/project/data/: mnist.py
src/project/models/: mnist.py
src/sci_imageminer_2026/: config.py  test.py  train.py
src/staged_qwen3_5_scivqa/: __init__.py  analysis.py  config.py  context.py  conversation.py  data.py  preprocessing.py  settings.py
src/staged_qwen3_5_scivqa/cli/: __init__.py  commands.py  main.py  utils.py
src/staged_qwen3_5_scivqa/evaluation/: __init__.py  metrics.py
src/staged_qwen3_5_scivqa/models/: __init__.py  inference.py  loader.py  lora.py  reflection_runner.py  smt_runner.py  trainer.py
src/staged_qwen3_5_scivqa/smt/: __init__.py  grammars.py  pipeline.py  reflection.py  solver.py
tests/: conftest.py  test_analysis.py  test_config.py  test_context.py  test_conversation.py  test_data.py  test_model.py  test_preprocessing.py  test_settings.py
tests/test_cli/: test_commands.py  test_utils.py
tests/test_evaluation/: test_metrics.py
tests/test_models/: test_loader.py  test_lora.py  test_reflection_runner.py  test_smt_runner.py
tests/test_smt/: test_grammars.py  test_pipeline.py  test_solver.py
