[build-system]
build-backend = "uv_build"

requires = [ "uv-build>=0.10.8,<0.11" ]

[project]
name = "sci-imageminer-2026"
version = "0.1.0"
description = "Sci-ImageMiner - Information Extraction from Atomic Layer Deposition/Etching (ALD/E) Scientific Figures (ICDAR 2026)"
authors = [ { name = "Vassilis Sioros", email = "v.sioros@iit.demokritos.gr" } ]
requires-python = ">=3.12"

classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "apted>=1.0.3",
  "bert-score>=0.3.13",
  "bitsandbytes>=0.49.2",
  "distance>=0.1.3",
  "llguidance>=1.7",
  "lxml>=6.0.2",
  "numpy<3",
  "outlines>=1.2.12",
  "pandas>=3.0.1",
  "pillow>=12.1.1",
  "pyswip>=0.3.3",
  "rouge-score>=0.1.2",
  "scikit-learn>=1.8",
  "tensorboard>=2.19",
  "tokenizers>=0.22.2",
  "torch==2.8",
  "torchvision>=0.23",
  "tqdm>=4.67.3",
  "transformers==5.2",
  "triton>=3.3",
  "trl==0.22.2",
  "unsloth[base]>=2026.3.3",
  "unsloth-zoo[base]>=2026.3.1",
  "xformers==0.0.32.post2",
]

[dependency-groups]
dev = [
  "ipykernel>=6.29.5",
  "ipywidgets>=8.1.5",
  "jupyter>=1.1.1",
  "mdx-truly-sane-lists>=1.3",
  "mkdocs>=1.6.1",
  "mkdocs-material[imaging]>=9.6.9",
  "mkdocs-minify-plugin>=0.8",
  "mkdocs-redirects>=1.2.1",
  "mkdocstrings[python]>=0.26.1",
  "mypy>=1.11.2",
  "poethepoet>=0.28",
  "pre-commit>=3.8",
  "pymdown-extensions>=10.11.1",
  "pytest>=8.3.3",
  "pytest-clarity>=1.0.1",
  "pytest-sugar>=1",
  "ruff>=0.15.5",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = [ "src/sci_imageminer_2026" ]

[tool.ruff]
# Assume Python 3.12
target-version = "py312"

# Same as Black.
line-length = 88
indent-width = 4

# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "site-packages",
  "venv",
]

# Like Black, indent with spaces, rather than tabs.
format.indent-style = "space"
# Like Black, use double quotes for strings.
format.quote-style = "double"
# Like Black, automatically detect the appropriate line ending.
format.line-ending = "auto"
# Like Black, respect magic trailing commas.
format.skip-magic-trailing-comma = false
# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
format.docstring-code-line-length = "dynamic"
# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
format.docstring-code-format = false
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
lint.select = [ "E4", "E7", "E9", "F" ]
lint.ignore = [  ]
# Allow fix for all enabled rules (when `--fix`) is provided.
lint.fixable = [ "ALL" ]
lint.unfixable = [  ]
# Allow unused variables when underscore-prefixed.
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.docformatter]
black = true
non-strict = true
non-cap = [ "src/sci_imageminer_2026" ]
recursive = true
in-place = true

[tool.pytest.ini_options]
pythonpath = [ "src/sci_imageminer_2026" ]
addopts = "-vv --color=yes"
log_cli = false
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_cli_format = "%(asctime)s %(levelname)s %(message)s"
log_cli_level = "INFO"
python_files = "test_*.py"
python_functions = "test_*"
testpaths = "tests"
markers = [
  "unit: Unit tests",
  "integration: Integration tests",
  "skip: Skip tests",
  "xfail: Expected to fail tests",
  "asyncio: Mark test to be run with pytest-asyncio",
]

[tool.mypy]
files = [ "src/sci_imageminer_2026" ]
warn_unused_configs = true
warn_return_any = true
ignore_missing_imports = true
pretty = true
color_output = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict = true

[tool.uv]
package = true # This replaces tool.rye.virtual = false

[tool.uv.sources]
unsloth-zoo = { git = "https://github.com/unslothai/unsloth-zoo" }
unsloth = { git = "https://github.com/unslothai/unsloth" }

[tool.vulture]
min_confidence = 95
paths = [ "src/sci_imageminer_2026", "tests" ]

[tool.poe.tasks]
[tool.poe.tasks.clean]
cmd = "rm -rf ./**/__pycache__ dist site .pytest_cache .mypy_cache"
help = "Clean up any auxiliary files"

[tool.poe.tasks.fmt]
shell = "uv run ruff check --fix ."
help = "Format your codebase"

[tool.poe.tasks.hooks]
cmd = "uv run pre-commit run --all-files"
help = "Run all pre-commit hooks"

[tool.poe.tasks.test]
cmd = "uv run pytest"
help = "Run the test suite"

[tool.poe.tasks.types]
cmd = "uv run mypy"
help = "Run static type checking on your codebase"

[tool.poe.tasks.lint]
cmd = "uv run ruff check ."
help = "Lint your code for errors"

[tool.bandit]
recursive = true
exclude_dirs = [ "tests" ]
