[build-system]
build-backend = "uv_build"

requires = [ "uv-build>=0.10.8,<0.11" ]

[project]
name = "staged-qwen3-5-scivqa"
version = "2.0.1"
description = "Staged multimodal pipeline for scientific figure VQA using Qwen3.5 — summarization, table extraction, and answer-type-specific fine-tuning for the ICDAR 2026 Sci-ImageMiner competition"
readme = "README.md"
keywords = [
  "ald",
  "icdar",
  "information-extraction",
  "multimodal",
  "qwen",
  "scientific-figures",
  "vqa",
]
license = "Apache-2.0"
authors = [ { name = "Vassilis Sioros", email = "v.sioros@iit.demokritos.gr" } ]
requires-python = ">=3.12"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Image Recognition",
]

dependencies = [
  "apted>=1.0.3",
  "bert-score>=0.3.13",
  "bitsandbytes>=0.49.2",
  "datasets>=3.6",
  "huggingface-hub>=0.27",
  "llguidance>=1.7",
  "lxml>=6.0.2",
  "numpy<3",
  "outlines>=1.2.12",
  "pandas>=3.0.1",
  "pillow>=12.1.1",
  "pydantic-settings[yaml]>=2.7",
  "pyyaml>=6",
  "rich>=13.9",
  "rouge-score>=0.1.2",
  "scikit-learn>=1.8",
  "tensorboard>=2.19",
  "tokenizers>=0.22.2",
  "torch==2.8",
  "torchvision>=0.23",
  "tqdm>=4.67.3",
  "transformers==5.2",
  "trl==0.22.2",
  "typer[all]>=0.15",
  "unsloth[base]>=2026.3.3",
  "unsloth-zoo[base]>=2026.3.1",
  "xformers==0.0.32.post2",
]

urls.Competition = "https://sites.google.com/view/sci-imageminer/"
urls.Homepage = "https://github.com/insane-group/staged-qwen3.5-scivqa"
urls.Repository = "https://github.com/insane-group/staged-qwen3.5-scivqa"

scripts.sci-vqa = "staged_qwen3_5_scivqa.cli.main:app"

[dependency-groups]
dev = [
  "bandit[toml]>=1.8.2",
  "commitizen>=4.1.1",
  "coverage[toml]>=7.6.1",
  "gitlint>=0.19.1",
  "ipykernel>=6.29.5",
  "ipywidgets>=8.1.5",
  "jupyter>=1.1.1",
  "jupytext>=1.19.3",
  "mypy>=1.11.2",
  "poethepoet>=0.28",
  "prek>=0.3.8",
  "pytest>=8.3.3",
  "pytest-clarity>=1.0.1",
  "pytest-cov>=5",
  "pytest-sugar>=1",
  "ruff>=0.15.5",
  "vulture>=2.14",
  "wandb>=0.19",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = [ "src/staged_qwen3_5_scivqa" ]

[tool.ruff]
target-version = "py312"
line-length = 88
indent-width = 4

exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "notebooks/",
  "site-packages",
  "venv",
]

format.indent-style = "space"
format.quote-style = "double"
format.line-ending = "auto"
format.skip-magic-trailing-comma = false
format.docstring-code-line-length = "dynamic"
format.docstring-code-format = false

lint.select = [ "A", "B", "C", "D", "E", "F", "I", "N", "UP", "W" ]
lint.ignore = [ "D100", "D101", "D102", "D104", "D107", "D203", "D213" ]
lint.per-file-ignores."src/staged_qwen3_5_scivqa/config.py" = [ "E501" ]
lint.per-file-ignores."src/staged_qwen3_5_scivqa/context.py" = [ "C901" ]
lint.per-file-ignores."src/staged_qwen3_5_scivqa/data.py" = [ "B028", "C901" ]
lint.per-file-ignores."src/staged_qwen3_5_scivqa/evaluation/metrics.py" = [
  "C401",
]
lint.per-file-ignores."src/staged_qwen3_5_scivqa/models/smt_runner.py" = [
  "C901",
]
lint.per-file-ignores."src/staged_qwen3_5_scivqa/smt/grammars.py" = [ "E501" ]
lint.per-file-ignores."src/staged_qwen3_5_scivqa/smt/pipeline.py" = [
  "C901",
  "E501",
]
lint.per-file-ignores."src/staged_qwen3_5_scivqa/smt/reflection.py" = [
  "B028",
  "C901",
  "E501",
]
lint.per-file-ignores."tests/conftest.py" = [ "E501" ]
lint.per-file-ignores."tests/test_config.py" = [ "B007" ]
lint.per-file-ignores."tests/test_models/test_reflection_runner.py" = [ "E501" ]
lint.per-file-ignores."tests/test_models/test_smt_runner.py" = [ "E501" ]
lint.per-file-ignores."vulture_whitelist.py" = [ "B018", "F821" ]

lint.fixable = [ "ALL" ]
lint.unfixable = [  ]
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.codespell]
ignore-words-list = "ans,rouge,ser"
skip = "notebooks/*"

[tool.docformatter]
black = true
non-strict = true
non-cap = [ "staged_qwen3_5_scivqa" ]
recursive = true
in-place = true

[tool.pytest.ini_options]
pythonpath = [ "src" ]
asyncio_default_fixture_loop_scope = "session"
addopts = "-vv --color=yes"
log_cli = false
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_cli_format = "%(asctime)s %(levelname)s %(message)s"
log_cli_level = "INFO"
python_files = "test_*.py"
python_functions = "test_*"
testpaths = "tests"
markers = [
  "unit: Unit tests",
  "integration: Integration tests",
  "skip: Skip tests",
  "xfail: Expected to fail tests",
  "asyncio: Mark test to be run with pytest-asyncio",
]

[tool.coverage.paths]
source = [ "src" ]

[tool.coverage.run]
branch = true
source = [ "src/staged_qwen3_5_scivqa" ]

[tool.coverage.report]
show_missing = true
fail_under = 60
exclude_lines = [
  "if self.debug:",
  "pragma: no cover",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
]
ignore_errors = true
omit = [ "tests/*" ]

[tool.mypy]
files = [ "src/staged_qwen3_5_scivqa" ]
warn_unused_configs = true
warn_return_any = true
ignore_missing_imports = true
pretty = true
color_output = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict = false

[tool.jupytext.formats]
"notebooks/" = "ipynb"
"scripts/" = "py:percent"

[tool.uv]
package = true

[tool.uv.sources]
unsloth-zoo = { git = "https://github.com/unslothai/unsloth-zoo" }
unsloth = { git = "https://github.com/unslothai/unsloth" }

[tool.vulture]
min_confidence = 95
paths = [ "src/staged_qwen3_5_scivqa", "tests" ]

[tool.poe.tasks]
[tool.poe.tasks.clean]
cmd = "rm -rf ./**/__pycache__ dist site .pytest_cache .mypy_cache .coverage"
help = "Clean up any auxiliary files"

[tool.poe.tasks.fmt]
shell = "uv run ruff check --fix ."
help = "Format your codebase"

[tool.poe.tasks.hooks]
cmd = "uv run prek run --all-files"
help = "Run all pre-commit hooks"

[tool.poe.tasks.test]
help = "Run tests by category (unit, integration, or all)"
control.expr = "type"
args = [
  { name = "type", help = "The type of tests to run", default = "unit", positional = true },
]

[[tool.poe.tasks.test.switch]]
case = "unit"
cmd = "uv run pytest -m unit"

[[tool.poe.tasks.test.switch]]
case = "integration"
cmd = "uv run pytest -m integration"

[[tool.poe.tasks.test.switch]]
case = "all"
cmd = "uv run pytest"

[tool.poe.tasks.coverage]
cmd = "uv run pytest --cov=staged_qwen3_5_scivqa --cov-report=term-missing --cov-report=html"
help = "Run the test suite and produce a coverage report"

[tool.poe.tasks.types]
cmd = "uv run mypy"
help = "Run static type checking on your codebase"

[tool.poe.tasks.lint]
cmd = "uv run ruff check ."
help = "Lint your code for errors"

[tool.poe.tasks.jupytext]
cmd = "uv run jupytext --sync notebooks/*.py"
help = "Synchronize notebooks with their associated Python files"

[tool.bandit]
recursive = true
exclude_dirs = [ "tests" ]

[tool.semantic_release]
version_variable = "src/staged_qwen3_5_scivqa/__init__.py:__version__"
version_toml = [ "pyproject.toml:project.version" ]
major_on_zero = true
branch = "master"
upload_to_PyPI = false
upload_to_release = true
build_command = "pip install uv && uv build"
commit_message = "{version}\n\nAutomatically generated by python-semantic-release"
tag_format = "v{version}"

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease_token = "rc"
prerelease = false

[tool.semantic_release.changelog]
exclude_commit_patterns = [
  '''chore(?:\([^)]*?\))?: .+''',
  '''ci(?:\([^)]*?\))?: .+''',
  '''refactor(?:\([^)]*?\))?: .+''',
  '''style(?:\([^)]*?\))?: .+''',
  '''test(?:\([^)]*?\))?: .+''',
  '''build\((?!deps\): .+)''',
  '''Initial [Cc]ommit.*''',
]
mode = "update"
insertion_flag = "<!-- version list -->"
template_dir = "templates"

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"
output_format = "md"
mask_initial_release = true

[tool.semantic_release.changelog.environment]
block_start_string = "{%"
block_end_string = "%}"
variable_start_string = "{{"
variable_end_string = "}}"
comment_start_string = "{#"
comment_end_string = "#}"
trim_blocks = false
lstrip_blocks = false
newline_sequence = "\n"
keep_trailing_newline = false
extensions = [  ]
autoescape = false

[tool.semantic_release.commit_author]
env = "GIT_COMMIT_AUTHOR"
default = "semantic-release <semantic-release>"

[tool.semantic_release.commit_parser_options]
minor_tags = [ "feat" ]
patch_tags = [ "fix", "perf" ]
other_allowed_tags = [
  "build",
  "chore",
  "ci",
  "docs",
  "style",
  "refactor",
  "test",
]
allowed_tags = [
  "feat",
  "fix",
  "perf",
  "build",
  "chore",
  "ci",
  "docs",
  "style",
  "refactor",
  "test",
]
default_bump_level = 0
parse_squash_commits = true
ignore_merge_commits = true

[tool.semantic_release.remote]
name = "origin"
type = "github"
ignore_token_for_push = false
insecure = false

[tool.semantic_release.publish]
dist_glob_patterns = [ "dist/*" ]
upload_to_vcs_release = true
